Updated major Blog view using API

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.iqapp"
-    >
-    <uses-permission android:name="android.permission.INTERNET"/>
+    package="com.example.iqapp">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IQApp">
-
+        <activity
+            android:name=".OurBlog"
+            android:exported="false" />
         <activity
             android:name=".BoardActivity"
             android:exported="false" />
