--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,24 +13,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IQApp">
         <activity
-            android:name=".SplashActivity"
-            android:exported="true" >
+            android:name=".Activities.EventActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".OurBlog"
+            android:name=".Activities.BlogActivity"
             android:exported="false" />
         <activity
-            android:name=".BoardActivity"
+            android:name=".Activities.BoardActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
